--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
     "axios": "^1.10.0",
     "flowbite-react": "^0.11.8",
     "formik": "^2.4.6",
+    "framer-motion": "^12.23.6",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-loading-indicators": "^1.0.1",
     "react-router": "^7.6.3",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
