FEAT:Friend req and acc

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
     "flowbite-react": "^0.11.8",
     "formik": "^2.4.6",
     "framer-motion": "^12.23.6",
