--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,7 @@ SECRET_KEY=
 FIREBASE_CREDENTIALS=
 PBKDF2_ITERATIONS=
 BCRYPT_ROUNDS=
+REDIS_HOST= #localhost
+REDIS_PORT= #6379
+REDIS_DB= #0
+FLASK_JWT_SECRET=
