--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,8 +6,9 @@ python-dotenv==1.0.0
 google-cloud-firestore==2.11.1
 google-auth==2.23.4
 google-api-core==2.11.1
-flask-session
-pyjwt
-flask-jwt-extended
+flask-session==0.4.0
+PyJWT==2.7.0
+flask-jwt-extended==4.4.4
 requests==2.31.0
 gunicorn==20.1.0
+redis==4.6.0
