--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
     "flowbite-react": "^0.11.8",
     "formik": "^2.4.6",
     "framer-motion": "^12.23.6",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "npm": "^11.5.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
@@ -23,6 +26,7 @@
     "react-router": "^7.6.3",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
+    "react-scrollbars-custom": "^4.1.1",
     "typewriter-effect": "^2.22.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
