chore: env variable in example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,4 @@ REDIS_HOST= #localhost
 REDIS_PORT= #6379
 REDIS_DB= #0
 FLASK_JWT_SECRET=
+KYBER_LIB_PATH= #optional, if you have the Kyber C library in a directory other than the base directory of the program.
